# StravaGPT

./: .env.example  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  storage.py  strava.py
stravagpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chatgpt_openapi.py  test_storage.py
