[project]
name = "stravagpt"
version = "0.1.0"
description = "A lightweight local backend for syncing Strava activities for later training analysis."
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.8.30",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "libsql>=0.1.10",
    "pydantic-settings>=2.4.0",
    "truststore>=0.10.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
